src/objects/NCP_Email_Merge_Fields__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains merge fields for use in DCP email templates</description>
    <fields>
        <fullName>salutation_contact_page__c</fullName>
        <description>Link to a contact page</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter the URL of a contact page</inlineHelpText>
        <label>Salutation Contact Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>salutation_email__c</fullName>
        <description>Contact email address</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter an email address.</inlineHelpText>
        <label>Salutation Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>salutation_name__c</fullName>
        <description>Name of the Nokia Support Team</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provide the name of the Nokia support team</inlineHelpText>
        <label>Salutation Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salutation_phone__c</fullName>
        <description>Phone number</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a phone number</inlineHelpText>
        <label>Salutation Phone</label>
        <type>Phone</type>
    </fields>
    <label>Email_Merge_Fields</label>
</CustomObject>